# CardioMesh

./: .gitignore  CardiacMesh.py  Constants.py  LICENSE  README.md  VTKMesh.py  VolumetricMesh.py  __init__.py  decimation.py  dev.ipynb  generate_procrustes_transforms.py  pyproject.toml  setup.py
AHA_parcellation/: aha_segments_inertia_axes.ipynb  endo_epi_partition.ipynb
cardio_mesh/: CardiacMesh.py  CardiacMeshPopulation.py  Constants.py  __init__.py  procrustes.py
cardio_mesh/aha_parcellation/: aha_global_registration.ipynb  aha_mapping.ipynb  aha_segments_inertia_axes.ipynb  endo_epi_partition.ipynb  pytorch3d_example.py  subsetting_mtx_cardiac_meshes.ipynb
data/: LV_4396_vertices_with_aha_segments.vtk  LV_4396_vertices_with_epi_endo.vtk  Rodero_LV_endo_point_indices.txt  Rodero_LV_epi_point_indices.txt  cache_meshes.py  faces_and_downsampling_mtx_frac_0.1_LV.pkl  faces_and_downsampling_mtx_frac_0.1_full_heart.pkl  faces_fhm_10pct_decimation.csv  lv_base_epi_endo_labels.txt  subpartIDs_FHM_10pct.txt  subpartIDs_FHM_fullres.txt
notebooks/: decimation.ipynb  generate_auxiliary_files.ipynb
tests/: README.md  config_template.yaml  testing.ipynb
tests/sample_data/legacy_biventricular_model/: output.001.vtk
visualization/: visualization.ipynb
