[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardio_mesh"
version = "0.0.1"
description = "Un paquete de ejemplo"
readme = "README.md"
authors = [{ name = "Rodrigo Bonazzola", email = "rodbonazzola@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.0",
    "meshio>=5.3.5",
    "vtk>=9.3.1",
    "vedo>2024.5.2",
    "scipy>=1.10.1",
    "trimesh>=4.5.3"
]
requires-python = ">=3.8"
